em/skin/theme_resources/stylesheets/foundation.css
/* ... */
#calroot {
  width: 207px !important;
}

#caldays {
  height: 22px !important;
}

.icons-on .contenttype-document {
background: none;
}

div#video-listings .video span.duration {
   right: 25px;
}

.card {
    border-color: #FFF;
    border-style: solid;
    border-width: 1px;
    float: left;
    margin: 1em;
    padding: 1em 0;
    text-align: center;
    width: 110px;
}

@media only screen and (max-width: 985px) {
   #upper-container div.row.header { background:none repeat scroll 0 0 #C9CCD1; }
   #upper-container div.header {width: 100%;}
   #portal-searchbox { display:none;}
   #browse-menu, #publish-menu {margin-top: -8px; margin-left:9px; margin-right:0px;}
   div.row.header div.search { display: none; float: none; clear: both; }
   div.row.header, div.twelve.columns.header { height: 130px; }
   div.top-menu .header-menu-item { float: left; }
   div.row.header a.main-title p {left:0; }
   div.download { display: none; }
   div.unisubs-videoTab { display:none !important; }
   div.video div.rollover, div.video div.rollover p { max-width: 215px; }
   #video-listings div.video, #latestvideos div.video { max-width: 231px; }
   body.template-featured_videos_homepage #mid-container #featuredvideo .description { 
       clear: both; 
       position: inherit;
       float: none;
       width: 525px;
       height: auto;
       padding-bottom: 10px;
   }
}

body.template-logged_out .row .nine, body.template-login_form .row .nine, body.template-register .row .nine, body.template-publish_video .row .nine {
    width:100%;
}

body.template-usergroup-userprefs .row .nine {
    width:100%;
}

